Data Wrangling Intro

--- a/cleansing.ipynb
+++ b/cleansing.ipynb
@@ -123,47 +123,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "False"
-      ]
-     },
-     "execution_count": 52,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "s = 'Millionaires Mind: Give Baba to campaign with.'\n",
-    "findAuthor(s)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def getDataPoint(line): \n",
-    "#     splitLine = line.split(' - ') \n",
-    "#     dateTime = splitLine[0] \n",
-    "#     date, time = dateTime.split(',') \n",
-    "#     message = ' '.join(splitLine[1:]) \n",
-    "#     if findAuthor(message): \n",
-    "#         splitMessage = message.split(': ') \n",
-    "#         author = splitMessage[0] \n",
-    "#         message = ' '.join(splitMessage[1:])\n",
-    "#     else: \n",
-    "#         author = None \n",
-    "#     return date, time, author, message\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 55,
    "metadata": {},
    "outputs": [
@@ -336,11 +295,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv('Data\\extractedData.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a id='wrangling'></a>\n",
+    "## Data Wrangling\n",
+    "\n",
+    "The data to be cleansed is stored as `extractedData.csv`. \n",
+    "\n",
+    "#### Data Understanding\n",
+    "\n",
+    "To understand this data, I seek to answer the following questions:\n",
+    "    \n",
+    "> - How many active participants are in the group?\n",
+    "\n",
+    "> - How many texts and media have been sent to the group?\n",
+    "\n",
+    "> - What are the commonly used words in the group chat.\n",
+    "\n",
+    "> - What are the emotions attached to every user?\n",
+    "\n",
+    "> - What are the trends in chatting in the group?"
    ]
   }
  ],
