Begin Data Cleansing

--- a/cleansing.ipynb
+++ b/cleansing.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -97,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -123,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -132,7 +132,7 @@
        "('3/22/22', ' 11:49 PM', 'Millionaires Mind', 'Give Baba to campaign with.')"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -169,7 +169,7 @@
     "with open('Data\\WhatsApp Chat with Voice of the Youth (VOY).txt', 'r' , encoding=\"utf8\") as f:\n",
     "    f.readline() # Skip first line\n",
     "    messageBuffer = [] \n",
-    "    date, time, author = None, None, None \n",
+    "    date, time, authorInfo = None, None, None \n",
     "    while True: \n",
     "        line = f.readline() \n",
     "        if not line: \n",
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -268,14 +268,14 @@
        "939 2022-09-16   6:14 PM  +254 710 835708   \n",
        "\n",
        "                                         Message  \n",
-       "935                    <Media omitted>            \n",
+       "935                              <Media omitted>  \n",
        "936  Anyone, Mombasa to kismu ni how much by bus  \n",
-       "937                     2500 Ena Coach            \n",
-       "938                    <Media omitted>            \n",
-       "939                         Smart                 "
+       "937                               2500 Ena Coach  \n",
+       "938                              <Media omitted>  \n",
+       "939                                        Smart  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,6 +325,320 @@
     "\n",
     "> - What are the trends in chatting in the group?"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Load Data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>AuthorInfo</th>\n",
+       "      <th>Message</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>🥳🥳🥳...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-03-23</td>\n",
+       "      <td>11:07 PM</td>\n",
+       "      <td>Njogu Wa Kahiu</td>\n",
+       "      <td>Hello Guys Who Has An Upwork Account That Has ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-03-23</td>\n",
+       "      <td>11:22 PM</td>\n",
+       "      <td>Toko Tai 💫</td>\n",
+       "      <td>Who has a diploma certificate Or a degree cert...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-03-23</td>\n",
+       "      <td>11:24 PM</td>\n",
+       "      <td>Toko Tai 💫</td>\n",
+       "      <td>Like I want to use Someone's degree /diploma c...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-03-23</td>\n",
+       "      <td>11:24 PM</td>\n",
+       "      <td>Toko Tai 💫</td>\n",
+       "      <td>I have alot of Jobs in return I can give one A...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         Date       Time      AuthorInfo  \\\n",
+       "0         NaN        NaN             NaN   \n",
+       "1  2022-03-23   11:07 PM  Njogu Wa Kahiu   \n",
+       "2  2022-03-23   11:22 PM      Toko Tai 💫   \n",
+       "3  2022-03-23   11:24 PM      Toko Tai 💫   \n",
+       "4  2022-03-23   11:24 PM      Toko Tai 💫   \n",
+       "\n",
+       "                                             Message  \n",
+       "0                                             🥳🥳🥳...  \n",
+       "1  Hello Guys Who Has An Upwork Account That Has ...  \n",
+       "2  Who has a diploma certificate Or a degree cert...  \n",
+       "3  Like I want to use Someone's degree /diploma c...  \n",
+       "4  I have alot of Jobs in return I can give one A...  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data = pd.read_csv('Data\\extractedData.csv')\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 940 entries, 0 to 939\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column      Non-Null Count  Dtype \n",
+      "---  ------      --------------  ----- \n",
+      " 0   Date        939 non-null    object\n",
+      " 1   Time        939 non-null    object\n",
+      " 2   AuthorInfo  939 non-null    object\n",
+      " 3   Message     940 non-null    object\n",
+      "dtypes: object(4)\n",
+      "memory usage: 29.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Time</th>\n",
+       "      <th>AuthorInfo</th>\n",
+       "      <th>Message</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>939</td>\n",
+       "      <td>939</td>\n",
+       "      <td>939</td>\n",
+       "      <td>940</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>unique</th>\n",
+       "      <td>119</td>\n",
+       "      <td>589</td>\n",
+       "      <td>88</td>\n",
+       "      <td>728</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>top</th>\n",
+       "      <td>2022-08-16</td>\n",
+       "      <td>10:35 PM</td>\n",
+       "      <td>+254 704 932171</td>\n",
+       "      <td>&lt;Media omitted&gt;</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>freq</th>\n",
+       "      <td>65</td>\n",
+       "      <td>7</td>\n",
+       "      <td>86</td>\n",
+       "      <td>131</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "              Date       Time       AuthorInfo          Message\n",
+       "count          939        939              939              940\n",
+       "unique         119        589               88              728\n",
+       "top     2022-08-16   10:35 PM  +254 704 932171  <Media omitted>\n",
+       "freq            65          7               86              131"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Assessing Data**\n",
+    "\n",
+    "- `Author Info` contains both names and contact numbers.\n",
+    "- `Message` column contains links, media, emojis and invalid numbers (0).\n",
+    "- `Date` column not in proper format.\n",
+    "- `AuthorInfo` column not in proper format.\n",
+    "- One missing value"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Cleansing Data**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_clean = data.copy()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Convert data types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Date', 'Time', 'AuthorInfo', 'Message'], dtype='object')"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_clean.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_clean['Date'] = pd.to_datetime(data_clean['Date'], errors = 'coerce').dt.date \n",
+    "data_clean['Time'] = pd.to_datetime(data_clean['Time'], errors = 'coerce')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 940 entries, 0 to 939\n",
+      "Data columns (total 4 columns):\n",
+      " #   Column      Non-Null Count  Dtype         \n",
+      "---  ------      --------------  -----         \n",
+      " 0   Date        939 non-null    object        \n",
+      " 1   Time        0 non-null      datetime64[ns]\n",
+      " 2   AuthorInfo  939 non-null    object        \n",
+      " 3   Message     940 non-null    object        \n",
+      "dtypes: datetime64[ns](1), object(3)\n",
+      "memory usage: 29.5+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_clean.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
